--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,9 +2,9 @@
     <%= link_to image_tag("nav_logo.jpg", :size => "75x75"), '/', id: "logo" %>
     <nav>
       <ul class="nav_right">
-        <li><%= link_to "Log In", root_path %></li>
-        <li><%= link_to "Sign Up", root_path %></li>
-        <li><%= link_to "Log Out", root_path %></li>
-      </ul>  
+        <li class="login-button"><%= link_to "Log In", root_path %></li>
+        <li class="signup-button"><%= link_to "Sign Up", root_path %></li>
+        <li class="logout-button"><%= link_to "Log Out", root_path %></li>
+      </ul>
     </nav>
 </header>
