added ability to close popup

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -101,10 +101,14 @@
   margin: 5% auto;
   height: 10%;
 }
-.error{
+.message{
   text-align: center;
   display: none;
-  color: red;
   margin: 0;
   padding: 0;
+}
+.close-button{
+  border: 1px solid black;
+  float: right;
+  padding: 0.75em;
 }
