--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,10 +10,11 @@
 </header>
 
 <div class="signin-form">
+  <span class="close-button">X</span>
   <h3>Sign In</h3>
 
   <div class="center">
-    <p class="error"></p>
+    <p class="message"></p>
     <input type="text" placeholder="Email" name="email" required></input>
     <input type="password" placeholder="Password" name="password" required></input>
   </div>
@@ -22,10 +23,11 @@
 </div>
 
 <div class="signup-form">
+  <span class="close-button">X</span>
   <h3>Sign Up</h3>
 
   <div class="center">
-    <p class="error"></p>
+    <p class="message"></p>
     <input type="text" placeholder="Username" name="username" required></input>
     <input type="text" placeholder="Email" name="email" required></input>
     <input type="password" placeholder="Password" name="password" required></input>
