created use current location button

--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -4,6 +4,7 @@
   </head>
   <body>
     <input id="pac-input" class="controls" type="text" placeholder="Search Box">
-    <div id="map-canvas"/>
+    <div id="map-canvas"></div>
+    <button id="current-location" type="button">Use current location</button>
   </body>
 </html>
