--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
   <script type="text/javascript"
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3Iewp9rVoOTro9afnOvCZNyEYZTHeZ0s">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3Iewp9rVoOTro9afnOvCZNyEYZTHeZ0s&sensor=true">
   </script>
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
   <title>TrekTracker</title>
