added basic css to nav bar

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,10 +2,9 @@
     <%= link_to image_tag("nav_logo.jpg", :size => "75x75"), '/', id: "logo" %>
     <nav>
       <ul class="nav_right">
+        <li class="logout-button"><a href="/logout">Log Out</a></li>
         <li class="signin-button">Sign In</li>
         <li class="signup-button">Sign Up</li>
-        <li class="logout-button"><a href="/logout">Log Out</li>
-
       </ul>
     </nav>
 </header>
