--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html>
-  <head>
-  </head>
-  <body>
-    <input id="pac-input" class="controls" type="text" placeholder="Search Box">
-    <div id="map-canvas"></div>
-    <button id="current-location" type="button">Use current location</button>
-  </body>
-</html>
+<div class="opening">Find Your Path</div>
+<div class="description">Discover new hikes from over 6,500 U.S. trails</div>
+
+<div class="current-location">
+	<button type="button">Use current location</button>
+</div>
+
+<input id="pac-input" class="controls" type="text" placeholder="Search Box">
+
+<div id="map-canvas"></div>
+
+<p class="purpose">TrekTracker offers vital information about the most important part of a hike: the Trail. An interactive map lets you find the right trail for you, and fills your pack with the information you need to make the hike your own. Detailed trail information such as pinpoint accuracy of trailheads using latitude and longitude, trail length, and difficulty are easily accessible. Explore a trail in depth and see photos of where you're headed before you get there. Check out trail reviews posted by hikers like you and see their tips for making the hike more about the trek, and less about the distractions. Lace up your boots and head out, then circle back to TrekTracker and share your experience with other hikers like you.</p>
+
+
+ 
