--- a/app/views/trails/show.html.erb
+++ b/app/views/trails/show.html.erb
@@ -1,36 +1,50 @@
-<div class="trail-show-content">
-  <div class="trail-show-top">
-    <div class="trail-show-map">
-      <span id="map-canvas"><img src="http://maps.googleapis.com/maps/api/staticmap?center=<%=@trail.latitude%>,<%=@trail.longitude%>&zoom=10&size=400x400&markers=<%=@trail.latitude%>,<%=@trail.longitude%>"></img></span>
-      <h5><%= @trail.city %></h5>
-      <h5><%= @trail.state %></h5>
-      <h5>temperature might go here</h5>
+<div class="content">
+    <div class="trail-name"><h1><%= @trail.name %></h1></div>
+    <div class="rating">Rating: <%= @trail.rating == nil ? 0 : @trail.rating %></div>
+    <div class="user-features">
+      <div class="user-buttons">
+        <button class="comment-button">Comment</button>
+          <form class="upload-button" accept-charset-"UTF-8" action="trails/<%= @trail.id %>/photos" class="new_photo" enctype="multipart/form-data" id="new_photo" method="POST">
+            <input id="photo_trail_id" name="photo[trail_id]" type="hidden">
+            <input class="choose-photo" id="photo_image" name="photo[image]" type="file">
+            <input class="submit-photo" name="commit" type="submit" value="Submit Photo">
+          </form>
+      </div>
     </div>
-
-    <div class="trail-show-vitals-top">
-      <h3><%= @trail.name %></h3>
-      <span><%= @trail.rating == nil ? 0 : @trail.rating %></span>
-      <button class="comment-button">Comment</button>
-      <button class="upload-button">Upload</button>
+    <div class="show-map"></div>
+    <div class="trail-location"><%= @trail.city %>, <%= @trail.state %></div>
+    <div class="trail-metrics">Length: <%= @trail.length %>  Difficulty: <% @trail.difficulty %></div>
+    <div class="description"><p><%= @trail.description %></p></div>
+    <div class="trail-carousel"></div>
+    <div class="comments-section">
+      <% if @trail.comments != [] %>
+      <% @trail.comments.each do |comment| %>
+      <div class="one-comment">
+        <div class="comment-top">
+          <div class="comment-top-left">
+            <%= comment.user.username %> <%= Date.parse(comment.created_at.to_s) %>
+          </div>
+          <div class="comment-top-right">
+            rating: <%= comment.rating %> difficulty: <%= comment.difficulty %>
+          </div>
+        </div>
+        <div class="comment-review"><div class="comment-review-body">
+          <p><%= comment.review %></div></p>
+        </div>
+        <div class="comment-bottom">
+          <div class="comment-tip">
+            <p>Tip: <%= comment.tip %></p>
+          </div>
+          <div class="comment-date-hiked">
+            date hiked: <%= comment.date_hiked %>
+          </div>
+        </div>
+      </div>
     </div>
-
-    <div class="trail-show-vitals-bottom">
-      <p><%= @trail.length %></p>
-      <p><%= @trail.difficulty == nil ? "Not Yet Rated" : @trail.difficulty %></p>
-      <p><%= @trail.description %></p>
-    </div>
+    <% end %>
+    <% end %>
   </div>
-
-  <div class="photo-carousel-section">
-    <div class="photos">PHOTOS</div>
-  </div>
-
-  <div class="comments-section">
-    <div class="single-comment">One Single Comment</div>
-  </div>
-
 </div>
-
 <!-- ravi added to test photos -->
 <div>
 <%= form_for @photo, url: {action: "create", controller: "photos", trail_id: @trail.id }, :html => {:multipart => true} do |f| %>
