--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header>
     <%= link_to image_tag("icon.png", :size => "60x60", :id => "icon"), '/' %>
-    <div id="title">TrekTracker</div>
+   <!--  <div id="title">TrekTracker</div> -->
     <nav>
       <ul class="nav_right">
         <li class="logout-button"><a href="/logout">Log Out</a></li>
