--- a/app/views/trails/show.html.erb
+++ b/app/views/trails/show.html.erb
@@ -11,7 +11,9 @@
           </form>
       </div>
     </div>
-    <div class="show-map"></div>
+    <div class="trail-show-map">
+      <div id="map-canvas"></div>
+    </div>
     <div class="trail-location"><%= @trail.city %>, <%= @trail.state %></div>
     <div class="trail-metrics">Length: <%= @trail.length %>  Difficulty: <% @trail.difficulty %></div>
     <div class="description"><p><%= @trail.description %></p></div>
