--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <script type="text/javascript"
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3Iewp9rVoOTro9afnOvCZNyEYZTHeZ0s&sensor=true">
   </script>
@@ -14,6 +15,7 @@
 <body>
 
 <%= render "layouts/header" %>
+<%= render "layouts/comment" %>
 
 <%= yield %>
 
