fixed icon to homepage bug

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-    <%= link_to image_tag("icon.png", :size => "60x60", :id => "icon"), '/' %>
+    <%= image_tag("icon.png", :size => "60x60", :id => "icon") %>
    <!--  <div id="title">TrekTracker</div> -->
     <nav>
       <ul class="nav_right">
