updated sessions views in header, icon, and fixed double map transition glitch on map-show-page

--- a/app/assets/stylesheets/trails_show.css
+++ b/app/assets/stylesheets/trails_show.css
@@ -115,6 +115,12 @@ form.upload-button{
   background-color: red;
 }
 
+#trail-map-canvas {
+  width: 300px;
+  height: 300px;
+
+  display: block;
+}
 
 .show-map {
   background-color: orange;
