--- a/app/views/trails/show.html.erb
+++ b/app/views/trails/show.html.erb
@@ -3,7 +3,9 @@
     <div class="rating">Rating: <%= @trail.rating == nil ? 0 : @trail.rating %></div>
     <div class="user-features">
       <div class="user-buttons">
-        <button class="comment-button">Comment</button>
+        <% if @user %>
+          <button class="comment-button">Comment</button>
+        <% end %>
           <form class="upload-button" accept-charset-"UTF-8" action="trails/<%= @trail.id %>/photos" class="new_photo" enctype="multipart/form-data" id="new_photo" method="POST">
             <input id="photo_trail_id" name="photo[trail_id]" type="hidden">
             <input class="choose-photo" id="photo_image" name="photo[image]" type="file">
@@ -12,7 +14,7 @@
       </div>
     </div>
     <div class="trail-show-map">
-      <div id="map-canvas"></div>
+      <div id="trail-map-canvas"></div>
     </div>
     <div class="trail-location"><%= @trail.city %>, <%= @trail.state %></div>
     <div class="trail-metrics">Length: <%= @trail.length %>  Difficulty: <% @trail.difficulty %></div>
