got the carousel actually working. make sure that you have at least 4 photos to display for the carousel version

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,17 @@
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
 
   <title>TrekTracker</title>
+<!-- Important Owl stylesheet -->
+<link rel="stylesheet" href="owl-carousel/owl.carousel.css">
+
+<!-- Default Theme -->
+<link rel="stylesheet" href="owl-carousel/owl.theme.css">
+
+<!--  jQuery 1.7+  -->
+<script src="jquery-1.9.1.min.js"></script>
+
+<!-- Include js plugin -->
+<script src="assets/owl-carousel/owl.carousel.js"></script>
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -26,6 +37,7 @@
 <%= render "layouts/comment" %>
 
 <%= yield %>
+
 
 </body>
 
