--- a/app/views/trails/show.html.erb
+++ b/app/views/trails/show.html.erb
@@ -18,9 +18,9 @@
     <div class="trail-metrics">Length: <%= @trail.length %>  Difficulty: <% @trail.difficulty %></div>
     <div class="description"><p><%= @trail.description %></p></div>
     <div class="trail-carousel">
-      <div id="owl-demo">
+      <div id="owl-demo" class="owl-carousel">
         <% @trail.photos.each do |photo| %>
-        <div class="item"><img src="<%= photo.image_url.to_s %>"></div>
+        <div class="item"><img class="lazyOwl" data-src="<%= photo.image_url.to_s %>"></div>
         <% end %>
       </div>
 
