fixed merged conflict

--- a/app/views/trails/show.html.erb
+++ b/app/views/trails/show.html.erb
@@ -13,9 +13,7 @@
           </form>
       </div>
     </div>
-    <div class="trail-show-map">
-      <div id="trail-map-canvas"></div>
-    </div>
+    <div id="map-canvas"></div>
     <div class="trail-location"><%= @trail.city %>, <%= @trail.state %></div>
     <div class="trail-metrics">Length: <%= @trail.length %>  Difficulty: <% @trail.difficulty %></div>
     <div class="description"><p><%= @trail.description %></p></div>
