--- a/app/assets/stylesheets/trails_show.css
+++ b/app/assets/stylesheets/trails_show.css
@@ -9,12 +9,12 @@
   border: 1px solid black;
 }
 
-.trail-show-map{
-  border: 1px solid black;
-  display: block;
-  float: left;
-  width: 400px;
-  height: 400px;
+
+#map-canvas{
+  margin: 0 auto;
+  padding: 0;
+  width: 300px;
+  height: 300px;
 }
 
 .trail-show-vitals-top{
