--- a/app/views/trails/show.html.erb
+++ b/app/views/trails/show.html.erb
@@ -21,10 +21,11 @@
     <div class="trail-location"><%= @trail.city %>, <%= @trail.state %></div>
     <div class="trail-metrics">Length: <%= @trail.length %>  Difficulty: <% @trail.difficulty %></div>
     <div class="description"><p><%= @trail.description %></p></div>
-
     <div class="trail-carousel">
-
-    </div>
+      <% @trail.photos.each do |photo|  %>
+        <div class="trail-carousel-img"><img src=<%= photo.image_url(:thumb).to_s %>></img></div>
+      <% end %>
+    </div> 
 
     </div>
     <div class="comments-section">
