added css to the comments section. Mobile css is done

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -1,6 +1,7 @@
 body {
   background-color: #ffffff;
   background-image: url(http://www.transparenttextures.com/patterns/billie-holiday.png);
+  font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 #title {
