--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
    <!--  <div id="title">TrekTracker</div> -->
     <nav>
       <ul class="nav_right">
-        <li class="logout-button"><a href="/logout">Log Out</a></li>
+        <a class="logout-href" href="/logout"><li class="logout-button">Log Out</li></a>
         <li class="signin-button">Sign In</li>
         <li class="signup-button">Sign Up</li>
       </ul>
