modified the carousel to be 80% width of page

--- a/app/assets/stylesheets/trails_show.css
+++ b/app/assets/stylesheets/trails_show.css
@@ -101,6 +101,8 @@ input#photo_image.choose-photo{
 
 .trail-carousel{
   height: 300px;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .trail-carousel-img{
