added green to the slick slider buttons

--- a/app/assets/stylesheets/trails_show.css
+++ b/app/assets/stylesheets/trails_show.css
@@ -112,6 +112,10 @@ input#photo_image.choose-photo{
   margin: 0px;
 }
 
+.slick-prev:before, .slick-next:before{
+  color: green;
+}
+
 .trail-carousel-img img{
   margin: 0px auto;
 }
