added a fake show for the map while loading to be a light blue color

--- a/app/assets/stylesheets/trails_show.css
+++ b/app/assets/stylesheets/trails_show.css
@@ -74,7 +74,7 @@ input#photo_image.choose-photo{
 }
 
 .show-map {
-  background-color: orange;
+  background-color: #c4e3f5;
   width: 300px;
   height: 300px;
   margin: auto;
