edited the actual first mobile responsiveness of show page

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -20,7 +20,7 @@ img[alt="Trailapi"] {
   position: relative;
   bottom: 10px;
   left: 4x;
-  font-size: 45px;
+  font-size: 800%;
 }
 
 .signin-form{
