--- a/app/assets/stylesheets/trails_show.css
+++ b/app/assets/stylesheets/trails_show.css
@@ -136,9 +136,9 @@ input#photo_image.choose-photo{
 }
 
 .trail-carousel-img img{
-  margin: 22% auto 0 auto;
-  height: 58%;
-  width: 94%;
+  margin: 45px auto 0 auto;
+  height: 68%;
+  width: 100%;
 }
 
 
