basic javascript responsiveness for slick carousel

--- a/app/assets/stylesheets/trails_show.css
+++ b/app/assets/stylesheets/trails_show.css
@@ -137,8 +137,8 @@ input#photo_image.choose-photo{
 
 .trail-carousel-img img{
   margin: 45px auto 0 auto;
-  height: 68%;
-  width: 100%;
+  height: 12em;
+  width: 20em;
 }
 
 
