--- a/app/views/layouts/_comment.html.erb
+++ b/app/views/layouts/_comment.html.erb
@@ -3,7 +3,7 @@
   <p class="message"></p>
   <div class="input rating">
     <label >Rating</label>
-    <input type="hidden" required><i class="fa fa-tree"></i><i class="fa fa-tree"></i><i class="fa fa-tree"></i></i><i class="fa fa-tree"></i><i class="fa fa-tree"></i></input>
+    <input type="hidden" required><i class="fa fa-tree 1"></i><i class="fa fa-tree 2"></i><i class="fa fa-tree 3"></i></i><i class="fa fa-tree 4"></i><i class="fa fa-tree 5"></i></input>
   </div>
   <div class="input difficulty">
     <label >Difficulty</label>
