--- a/app/views/trails/show.html.erb
+++ b/app/views/trails/show.html.erb
@@ -1,6 +1,14 @@
 <div class="content">
     <div class="trail-name"><h1><%= @trail.name %></h1></div>
-    <div class="rating">Rating: <%= @trail.rating == nil ? 0 : @trail.rating %></div>
+    <div class="rating">Rating: 
+      <% if @trail.rating == nil %>
+        <%= 0 %>
+      <% else %>
+        <% @trail.rating.to_i.times do %>
+          <i class="fa fa-tree"></i>
+        <% end %>
+      <% end %>
+    </div>
     <div class="user-features">
       <form class="upload-button" accept-charset-"UTF-8" action="<%= @trail.id %>/photos" class="new_photo" enctype="multipart/form-data" id="new_photo" method="POST">
         <input id="photo_trail_id" name="photo[trail_id]" type="hidden">
