--- a/app/views/layouts/_comment.html.erb
+++ b/app/views/layouts/_comment.html.erb
@@ -7,7 +7,7 @@
   </div>
   <div class="input difficulty">
     <label >Difficulty</label>
-    <input type="range"  min="0" max="3" step="0.1"required>
+    <input type="range"  min=".1" max="2.9" step="0.1"required>
     <label id="range"></label>
   </div>
   <div class="input tip">
