--- a/app/views/layouts/_comment.html.erb
+++ b/app/views/layouts/_comment.html.erb
@@ -2,21 +2,21 @@
   <h3> Comment </h3>
   <p class="message"></p>
   <div class="input rating">
-    <label >Rating</label>
+    <label >Rate your hike:</label>
     <input type="hidden" required><i class="fa fa-tree 1"></i><i class="fa fa-tree 2"></i><i class="fa fa-tree 3"></i></i><i class="fa fa-tree 4"></i><i class="fa fa-tree 5"></i></input>
   </div>
   <div class="input difficulty">
-    <label >Difficulty</label>
+    <label >How difficult was the trail?</label>
     <input type="range"  min=".1" max="2.9" step="0.1"required>
     <label id="range"></label>
   </div>
   <div class="input tip">
     <label >Tip</label>
-    <textarea name="tip" rows="3" maxlength="140" required></textarea>
+    <textarea placeholder="key trail info other hikers have to know" name="tip" rows="3" maxlength="140" required></textarea>
   </div>
   <div class="input review">
     <label >Review</label>
-    <textarea name="review" rows="6" required></textarea>
+    <textarea placeholder="give us the good, the bad, and the ugly about this trail. leave no stone unturned!" name="review" rows="6" required></textarea>
   </div>
   <div class="input date-hiked">
     <label >Date Hiked</label>
